fix: wrong font color on policy pages with dark theme

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -303,6 +303,14 @@ mat-card-title {
     color: #e6e6e6;
   }
 
+  .policy {
+    .content {
+      p {
+        color: $dark-font-color !important;
+      }
+    }
+  }
+
   .mdc-floating-label {
     color: #e6e6e6 !important;
   }
